--- a/EmployeeManagement/appsettings.json
+++ b/EmployeeManagement/appsettings.json
@@ -1,10 +1,21 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=EmployeeTask;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+
+  "Jwt": {
+    "Key": "THIS_IS_MY_SUPER_SECRET_KEY_123456789",
+    "Issuer": "EmployeeManagementAPI",
+    "Audience": "EmployeeManagementAPI",
+    "DurationInMinutes": 60
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": { "DefaultConnection": "Server=localhost;Database=EmployeeTask;Trusted_Connection=True;TrustServerCertificate=True" }
+
+  "AllowedHosts": "*"
 }
